[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/database/property_editor/Base.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/database/property_editor/res_options.gd" type="Script" id=2]

[node name="HBoxContainer" instance=ExtResource( 1 )]

[node name="Name" parent="." index="0"]
margin_right = 510.0

[node name="OptionButton" type="OptionButton" parent="." index="1"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
toggle_mode = false
text = "New Resource"
script = ExtResource( 2 )

[node name="ChooseCat" type="FileDialog" parent="." index="2"]
margin_left = 709.0
margin_right = 1024.0
margin_bottom = 600.0
window_title = "Open a Directory"
mode = 2
current_dir = "res://data"
current_path = "res://data/"

[connection signal="editor_plugin_is_set" from="." to="OptionButton" method="_editor_plugin_is_set"]
[connection signal="item_selected" from="OptionButton" to="OptionButton" method="_item_selected"]
[connection signal="dir_selected" from="ChooseCat" to="." method="_choosecat_dir_selected"]
[connection signal="dir_selected" from="ChooseCat" to="OptionButton" method="change_options"]
